[project]
name = "llm-gateway-proxy"
version = "1.0.0"
description = "LLM API gateway proxy with priority queuing, concurrency control, and admin dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "httpx-socks>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
